--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -4,8 +4,8 @@ body {
 
 .para,
 .small-para {
-  color: hsl(0, 0%, 0%);
-  font-weight: 800;
+  color: black;
+  font-weight: 700;
 }
 
 .small-para {
@@ -17,25 +17,26 @@ body {
   font-size: 22px;
 }
 
-.confirm {
+.confirm-button {
   background: green;
   color: white;
   font-weight: bold;
+  font-size: 20px;
 } 
 
-.button {
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
+.cancel-button {
+  background-color: white;
+  color: black;
   font-size: 20px;
 }
 
-.child {
+.text-child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
 }
 
-div.text {
+.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
